# wynxx-demo

./: .env.example  .gitignore  README.md  archetype.md  pyproject.toml
.gemini/: settings.json
.github/workflows/: ci.yml
beachshirts_agent/: agent.py  prompt.py
beachshirts_agent/sub_agents/: __init__.py  delivery.py  shopping.py  styling.py
docs/: reference-architecture.md
docs/diagrams/: agentic-architecture.drawio
domain_agent/: agent.py  prompt.py  tools.py
integrations/: README.md
integrations/adk-agent-workflow/: .env.example  README.md  SETUP_REAL.md  agent_llm_real.py  agent_real_pipeline.py  agent_real_wynxx.py  explore_real.py  integration_real.py  integration_real_native.py  modernize_real.py  probe_mcp.py  pyproject.toml  requirements-real.txt  requirements.txt  run_real_job.py  run_workflow_real.py
integrations/adk-agent-workflow/deployment/: __init__.py  deploy.py
integrations/adk-agent-workflow/eval/: __init__.py  test_eval.py
integrations/adk-agent-workflow/eval/data/: expected_artifacts.json  sdlc_orchestration.evalset.json
integrations/adk-agent-workflow/sdlc_workflow/: __init__.py  __main__.py  agent.py  config.py  graph.py  prompt.py
integrations/adk-agent-workflow/tests/: test_workflow.py
integrations/agent-gateway-governance/: README.md  register-mcp-server.sh
integrations/apigee-mcp-bridge/: README.md  deploy-apigee.sh  wynxx-openapi.yaml
integrations/bigquery-observability/: README.md  execution-metadata.example.json  execution-metadata.schema.json
integrations/cloud-run-mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements-otel.txt  requirements.txt  server.py
integrations/cloud-run-mcp-server/scripts/: smoke_client.py
integrations/cloud-run-mcp-server/tests/: conftest.py  test_backend.py  test_execution.py  test_server.py
integrations/cloud-run-mcp-server/wynxx_mcp/: __init__.py  backend.py  config.py  execution.py  observability.py  schemas.py  server.py
integrations/cloud-run-mcp-server/wynxx_mcp/toolsets/: __init__.py  advisory.py  read_only.py
(+14 files in other folders)
