[project]
name = "wynxx-sdlc-workflow"
version = "1.0.0"
description = "ADK 2.0 graph-based SDLC orchestration over the Wynxx MCP server."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
]

[project.optional-dependencies]
# google-adk does not always pull the MCP client in transitively; McpToolset
# needs it, so pin it explicitly for real mode.
real = ["google-adk>=2.0", "mcp>=1.0,<2.0"]
dev = ["pytest>=8.0,<9.0", "ruff>=0.6,<1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sdlc_workflow"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
